ajuste na lista company
