# app/Http/Controllers/Controller.php
@@ -9,7 +9,15 @@ namespace App\Http\Controllers;
  *      @OA\Contact(
  *          email="brunocostasilva62@gmail.com"
  *      )
- * )
+ * ),
+ * @OA\SecurityScheme(
+ *          securityScheme="bearerAuth",
+ *          type="http",
+ *          scheme="bearer",
+ *          bearerFormat="JWT",
+ *          description="Autenticação via Bearer Token"
+ *      )
+ *  )
  */
 abstract class Controller
 {
